--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
-    "expo": "~51.0.21",
+    "expo": "^51.0.22",
     "expo-status-bar": "~1.12.1",
     "react": "^18.2.0",
     "react-native": "0.74.3",
+    "react-native-vector-icons": "^10.1.0",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
