--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "expo-status-bar": "~1.12.1",
     "react": "^18.2.0",
     "react-native": "0.74.3",
-    "styled-components": "^6.1.12"
+    "react-native-pager-view": "6.3.0",
+    "styled-components": "^6.1.12",
+    "@react-native-community/viewpager": "5.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
