--- a/package.json
+++ b/package.json
@@ -20,14 +20,13 @@
     "react-native": "0.74.3",
     "react-native-pager-view": "6.3.0",
     "styled-components": "^6.1.12",
-    "@react-native-community/viewpager": "5.0.11"
+    "@react-native-community/viewpager": "5.0.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "^1.17.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-vector-icons": "^10.1.0",
-    "styled-components": "^6.1.12"
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
