--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
     "expo": "^51.0.22",
+    "expo-build-properties": "^0.12.3",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.4",
     "react": "^18.2.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
