--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/viewpager": "5.0.11",
+    "@react-native-firebase/app": "^20.3.0",
+    "@react-native-firebase/auth": "^20.3.0",
+    "@react-native-firebase/firestore": "^20.3.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
@@ -22,6 +25,7 @@
     "firebase": "^10.12.4",
     "react": "^18.2.0",
     "react-native": "0.74.3",
+    "react-native-calendars": "^1.1306.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "^1.17.1",
     "react-native-pager-view": "^6.3.0",
