--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "^51.0.22",
-    "expo-build-properties": "^0.12.3",
+    "expo": "~51.0.24",
+    "expo-build-properties": "~0.12.4",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.4",
     "react": "^18.2.0",
     "react-native": "0.74.3",
     "react-native-calendars": "^1.1306.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-maps": "^1.17.1",
+    "react-native-maps": "1.14.0",
     "react-native-pager-view": "^6.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
