--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.10.1",
     "@react-navigation/stack": "^6.4.1",
     "expo": "^51.0.22",
+    "expo-image-picker": "^15.0.7",
     "expo-status-bar": "~1.12.1",
     "react": "^18.2.0",
     "react-native": "0.74.3",
@@ -26,9 +27,9 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0",
-    "styled-components": "^6.1.12",
-    "react-native-svg": "15.2.0"
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
