--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "firebase": "^10.12.4",
     "react": "^18.2.0",
     "react-native": "0.74.3",
+    "react-native-calendars": "^1.1306.0",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-maps": "^1.17.1",
+    "react-native-maps": "^1.14.0",
     "react-native-pager-view": "^6.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
