--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.2",
     "expo": "~51.0.24",
     "expo-build-properties": "~0.12.4",
     "expo-status-bar": "~1.12.1",
@@ -34,6 +35,7 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-webview": "13.8.6",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
