--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 node_modules/
+/Back/__pycache__/
 
 # Expo
 .expo/
@@ -35,3 +36,5 @@ yarn-error.*
 *.tsbuildinfo
 
 .env
+/Back/serviceAccountKey.json
+/Back/kakao_config.py
