스톱워치 작업중

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "blackBean",
-    "slug": "blackbean-lo-rujxf7fsf6xv5x7vm",
+    "slug": "blackBean",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -25,12 +25,6 @@
     },
     "plugins": [
       "expo-build-properties"
-    ],
-    "extra": {
-      "eas": {
-        "projectId": "1f540345-05ce-48fe-95c3-80f5010c1662"
-      }
-    },
-    "owner": "eunye"
+    ]
   }
 }
