--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.2",
     "expo": "^51.0.22",
-    "expo-image-picker": "^15.0.7",
     "expo-build-properties": "^0.12.3",
+    "expo-image-picker": "^15.0.7",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.4",
     "react": "^18.2.0",
@@ -35,6 +35,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
+    "react-native-stopwatch-timer": "^0.0.21",
     "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-webview": "13.8.6",
