--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/cli": "^0.18.26",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/viewpager": "5.0.11",
@@ -30,10 +31,10 @@
     "react-native": "0.74.3",
     "react-native-calendars": "^1.1306.0",
     "react-native-date-picker": "^5.0.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "^1.17.1",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-dotenv": "^3.4.11",
     "react-native-pager-view": "^6.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
