--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/viewpager": "5.0.11",
     "@react-native-firebase/app": "^20.3.0",
     "@react-native-firebase/auth": "^20.3.0",
+    "@react-native-firebase/database": "^20.3.0",
     "@react-native-firebase/firestore": "^20.3.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
@@ -22,18 +23,18 @@
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.2",
     "expo": "^51.0.22",
-    "expo-image-picker": "^15.0.7",
     "expo-build-properties": "^0.12.3",
+    "expo-image-picker": "^15.0.7",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.4",
     "react": "^18.2.0",
     "react-native": "0.74.3",
     "react-native-calendars": "^1.1306.0",
     "react-native-date-picker": "^5.0.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "^1.17.1",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-dotenv": "^3.4.11",
     "react-native-pager-view": "^6.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
