--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/cli": "^0.18.26",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/viewpager": "5.0.11",
     "@react-native-firebase/app": "^20.3.0",
@@ -22,7 +22,7 @@
     "@react-navigation/native-stack": "^6.10.1",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.2",
-    "expo": "^51.0.22",
+    "expo": "~51.0.24",
     "expo-build-properties": "^0.12.3",
     "expo-image-picker": "^15.0.7",
     "expo-status-bar": "~1.12.1",
@@ -33,7 +33,7 @@
     "react-native-date-picker": "^5.0.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-maps": "^1.17.1",
+    "react-native-maps": "1.14.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-pager-view": "^6.3.0",
     "react-native-picker-select": "^9.2.0",
