--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "@react-navigation/native-stack": "^6.10.1",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.2",
-    "expo": "^51.0.22",
+    "expo": "^51.0.24",
     "expo-build-properties": "^0.12.3",
     "expo-image-picker": "^15.0.7",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^10.12.4",
+    "firebase": "^10.12.5",
     "react": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-native": "0.74.3",
     "react-native-calendars": "^1.1306.0",
     "react-native-date-picker": "^5.0.4",
