--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "^51.0.24",
     "expo-build-properties": "^0.12.3",
     "expo-image-picker": "^15.0.7",
+    "expo-secure-store": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.4",
     "react": "^18.2.0",
