--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.3",
     "expo": "^51.0.22",
-
     "expo-build-properties": "^0.12.3",
     "expo-image-picker": "^15.0.7",
     "expo-secure-store": "^13.0.2",
@@ -45,7 +44,8 @@
     "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-webview": "13.8.6",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "@react-native-picker/picker": "2.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
