--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native-stack": "^6.10.1",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.3",
+    "date-fns-tz": "^3.1.3",
     "expo": "^51.0.22",
     "expo-build-properties": "^0.12.3",
     "expo-image-picker": "^15.0.7",
